deployment/deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: memorybox-external
  labels:
    app: memorybox-external
spec:
  selector:
    matchLabels:
      app: memorybox-external
  replicas: 1
  template:
    metadata:
      name: memorybox-external
      labels:
        app: memorybox-external
    spec:
      containers:
        - name: memberbox-external
          image: docker.io/hyeonkyo/memorybox-external:latest
          imagePullPolicy: Always
          ports:
            - name: port1
              containerPort: 8081
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1024Mi
---

apiVersion: v1
kind: Service
metadata:
  name: memorybox-external
spec:
  type: ClusterIP
  selector:
    app: memorybox-external
  ports:
    - name: memorybox-external
      port: 8080
      targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memorybox
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: memorybox-ikujo.165.192.105.60.nip.io
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: memorybox-external
                port: 
                  number: 8080
